# TemplateCMake

./: README.md
App/: CMakeLists.txt
App/dep/subdir1/: CMakeLists.txt
App/dep/subdir1/doc/: CMakeLists.txt
App/dep/subdir1/src/: foo.cpp  foo.h
App/dep/subdir2/: CMakeLists.txt
App/dep/subdir2/src/: bar1.cpp
App/scripts/: functions.cmake
App/src/: main.cpp
cmake-app/: .gitignore  CMakeLists.txt  README.md
cmake-app/doc/: CMakeLists.txt
cmake-app/import/subdir1/: CMakeLists.txt
cmake-app/import/subdir1/src/: main.cpp
cmake-app/import/subdir2/: CMakeLists.txt
cmake-app/src/: CMakeLists.txt  app-version.h  app-version.h.in  defines.h  defines.h.in  main.cpp
cmake-app/src/subdir1/: CMakeLists.txt
cmake-app/src/subdir1/src/: subdirfoo.cpp  subdirfoo.h
cmake-app/src/subdir2/src/: subdirbar.h
cmake-app/tests/: CMakeLists.txt  tst_test_case.cpp
cmake-app/tools/: lib_install.sh
cmake-lib/: CMakeLists.txt  README.md
cmake-lib/cmake/: VersionViaGit.cmake  functions.cmake
cmake-lib/doc/: CMakeLists.txt
cmake-lib/examples/: CMakeLists.txt  main.cpp
cmake-lib/import/subdir1/src/: foo.cpp  foo.h
cmake-lib/import/subdir2/src/: bar1.h
cmake-lib/src/: CMakeLists.txt
cmake-lib/src/subdir1/doc/: CMakeLists.txt
cmake-lib/src/subdir2/: CMakeLists.txt
cmake-lib/src/subdir2/src/: subdirbar.cpp
cmake-lib/tests/: CMakeLists.txt  tst_test_case.cpp
cmake-lib/tools/: install_dependencies.sh
